revops-lab/main/default/objects/Sales_Integration_Log__c/Sales_Integration_Log__c.object-meta.xml
<CustomObject>
    <description>One row per outbound ERP call: correlation id, status, timing and sanitised payloads. Written by SalesIntegrationLogService.</description>
    <label>Sales Integration Log</label>
    <nameField>
        <displayFormat>SIL-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Integration Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>