revops-lab/main/default/objects/Sales_Integration_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Named Credential reference, never a resolved URL.</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>