revops-lab/main/default/objects/Sales_Integration_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>