revops-lab/main/default/objects/Sales_Integration_Log__c/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <label>Integration Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>