revops-lab/main/default/objects/Sales_Integration_Log__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
                <default>true</default>
                <label>Success</label>
            </value>
            <value>
                <fullName>Retryable Failure</fullName>
            </value>
            <value>
                <fullName>Permanent Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>